Rename share modal

--- a/all-topics.html
+++ b/all-topics.html
@@ -303,7 +303,7 @@
                       <section>
                         <h1
                           tabindex="-1"
-                          class="_14i3z6h"
+                          class="heading-reset"
                           elementtiming="LCP-target"
                         >
                           <div class="h19hb7kj dir dir-ltr">
@@ -384,7 +384,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Searching and booking
@@ -454,7 +454,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your reservations
@@ -524,7 +524,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Payments, pricing, and refunds
@@ -594,7 +594,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your account
@@ -654,7 +654,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Safety
@@ -706,7 +706,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           About Airbnb
@@ -769,7 +769,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           About hosting
@@ -838,7 +838,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Calendar and bookings
@@ -891,7 +891,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Payouts and taxes
@@ -961,7 +961,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Managing your listing
@@ -1042,7 +1042,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your reservations
@@ -1112,7 +1112,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           About Airbnb
@@ -1163,7 +1163,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your account
@@ -1223,7 +1223,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Safety
@@ -1275,7 +1275,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Responsible hosting
@@ -1347,7 +1347,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           About hosting
@@ -1391,7 +1391,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Managing your experience
@@ -1443,7 +1443,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your reservations
@@ -1494,7 +1494,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Payouts and taxes
@@ -1527,7 +1527,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           About Airbnb
@@ -1578,7 +1578,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your account
@@ -1638,7 +1638,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Safety
@@ -1690,7 +1690,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Responsible hosting for Airbnb
@@ -1783,7 +1783,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Airbnb for Work basics
@@ -1816,7 +1816,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Your company's Airbnb for Work account
@@ -1869,7 +1869,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Booking and reservations
@@ -1903,7 +1903,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Billing and receipts
@@ -1936,7 +1936,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           About Airbnb
@@ -1987,7 +1987,7 @@
                                       <div class="p1umoqsc dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Safety
