--- a/edit/photos.html
+++ b/edit/photos.html
@@ -2057,7 +2057,7 @@
                                         <div class="flex-content-between">
                                           <h2
                                             tabindex="-1"
-                                            class="_14i3z6h"
+                                            class="heading-reset"
                                             elementtiming="LCP-target"
                                           >
                                             <span class="_kedp3u">Library</span>
@@ -2505,7 +2505,7 @@
                                     <section>
                                       <h2
                                         tabindex="-1"
-                                        class="_14i3z6h"
+                                        class="heading-reset"
                                         elementtiming="LCP-target"
                                       >
                                         <span class="main-content__schedule-text">
