--- a/feedback.html
+++ b/feedback.html
@@ -304,7 +304,7 @@
                             <section>
                               <h1
                                 tabindex="-1"
-                                class="_14i3z6h"
+                                class="heading-reset"
                                 elementtiming="LCP-target"
                               >
                                 <div class="h19hb7kj dir dir-ltr">
@@ -565,7 +565,7 @@ sdfsdfsdfsdf</textarea
                             <section>
                               <h1
                                 tabindex="-1"
-                                class="_14i3z6h"
+                                class="heading-reset"
                                 elementtiming="LCP-target"
                               >
                                 <div class="tgzm8rg dir dir-ltr">
@@ -605,7 +605,7 @@ sdfsdfsdfsdf</textarea
                             <section>
                               <h1
                                 tabindex="-1"
-                                class="_14i3z6h"
+                                class="heading-reset"
                                 elementtiming="LCP-target"
                               >
                                 <div class="h19hb7kj dir dir-ltr">
