--- a/host-liability-insurance.html
+++ b/host-liability-insurance.html
@@ -351,7 +351,7 @@
                               </div>
                             </div>
                             <section>
-                              <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                              <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                 <div class="h19hb7kj dir dir-ltr">
                                   <div id="FMP-target" class="tx2iwxx dir dir-ltr">Host liability insurance</div>
                                 </div>
@@ -476,16 +476,16 @@
                                       <div class="t1gs7fsd dir dir-ltr" id="content_feedback_primary_prompt">Did this article help?</div>
                                       <div class="b1l0j7xr dir dir-ltr">
                                         <div class="b1wvbmnn dir dir-ltr">
-                                          <button aria-describedby="content_feedback_primary_prompt" type="button" class="_11eqlma4">Yes</button>
+                                          <button aria-describedby="content_feedback_primary_prompt" type="button" class="button-container__wrapper">Yes</button>
                                         </div>
-                                        <button aria-describedby="content_feedback_primary_prompt" type="button" class="_11eqlma4">No</button>
+                                        <button aria-describedby="content_feedback_primary_prompt" type="button" class="button-container__wrapper">No</button>
                                       </div>
                                     </div>
                                   </div>
                                 </div>
                                 <div class="d1fga68g dir dir-ltr"></div>
                                 <section>
-                                  <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                  <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                     <div class="t15kpzrz dir dir-ltr">Related articles</div>
                                   </h2>
                                   <ul class="l94quoy dir dir-ltr">
@@ -551,7 +551,7 @@
                         <div class="_pawvzww"></div>
                         <aside class="cpwcjur dir dir-ltr">
                           <section>
-                            <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                            <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                               <div class="tgzm8rg dir dir-ltr">Need to get in touch?</div>
                             </h1>
                             <div class="tr5dwk dir dir-ltr">
