--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6312,7 +6312,7 @@
           <div class="h1e0znt6 dir dir-ltr">
             <div>
               <section>
-                <h2 id="availability-title" tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                <h2 id="availability-title" tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                   <div class="site-content__content-menu-h2-text" aria-hidden="false">Choose from available dates</div>
                 </h2>
                 <div class="_12bwmy">58 available</div>
@@ -19640,7 +19640,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           <div class="h1e0znt6 dir dir-ltr">
             <div>
               <section>
-                <h2 id="availability-title" tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                <h2 id="availability-title" tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                   <div class="site-content__content-menu-h2-text" aria-hidden="false">Choose from available dates</div>
                 </h2>
                 <div class="_12bwmy">58 available</div>
