--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -4199,7 +4199,7 @@
             <div class="_jq23ra">
               <div class="_aozijy">
                 <div>
-                  <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Everyday</h3>
+                  <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">Everyday</h3>
                 </div>
               </div>
               <div class="_3mpt2v">
@@ -4491,7 +4491,7 @@
             <div class="_jq23ra">
               <div class="_aozijy">
                 <div>
-                  <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Family-friendly</h3>
+                  <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">Family-friendly</h3>
                 </div>
               </div>
               <div class="_3mpt2v">
@@ -8571,7 +8571,7 @@
                                           style="padding-top: 32px; padding-bottom: 32px;">
                                           <section>
                                             <div class="cnlfh1x dir dir-ltr">
-                                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><img
+                                              <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target"><img
                                                   class="l1li2ovm dir dir-ltr"
                                                   src="https://a0.muscache.com/im/pictures/54e427bb-9cb7-4a81-94cf-78f19156faad.jpg"
                                                   alt="AirCover"></h2>
@@ -15629,7 +15629,7 @@
             <div class="_jq23ra">
               <div class="_aozijy">
                 <div>
-                  <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Everyday</h3>
+                  <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">Everyday</h3>
                 </div>
               </div>
               <div class="_3mpt2v">
@@ -16012,7 +16012,7 @@
             <div class="_jq23ra">
               <div class="_aozijy">
                 <div>
-                  <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Family-friendly</h3>
+                  <h3 tabindex="-1" class="heading-reset" elementtiming="LCP-target">Family-friendly</h3>
                 </div>
               </div>
               <div class="_3mpt2v">
