--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -319,7 +319,7 @@
                                           >
                                             <a
                                               href="/trips/v1/5837df17-f2bc-4de8-ac20-3d93ca50e382/ro/EXPERIENCE_RESERVATION/8421665"
-                                              class="_11eqlma4"
+                                              class="button-container__wrapper"
                                             >
                                               <div class="c1gmbq7c dir dir-ltr">
                                                 <div
@@ -442,7 +442,7 @@
                                           >
                                             <a
                                               href="/trips/v1/0791a7d2-0fcd-41f4-9811-436952babbda/ro/EXPERIENCE_RESERVATION/8408312"
-                                              class="_11eqlma4"
+                                              class="button-container__wrapper"
                                             >
                                               <div class="c1gmbq7c dir dir-ltr">
                                                 <div
