--- a/lps-resources/resources.html
+++ b/lps-resources/resources.html
@@ -235,7 +235,7 @@
                                             <ul class="_7s3ukx">
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/getting-started-53" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Getting started</div>
                                                   </h1>
                                                 </a>
@@ -254,7 +254,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/attracting-bookings-59" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Attracting bookings</div>
                                                   </h1>
                                                 </a>
@@ -278,7 +278,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/providing-a-5-star-experience-61" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Providing a 5-star Experience</div>
                                                   </h1>
                                                 </a>
@@ -297,7 +297,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/responsible-hosting-64" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Responsible hosting</div>
                                                   </h1>
                                                 </a>
@@ -316,7 +316,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/online-experiences-55" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Online Experiences</div>
                                                   </h1>
                                                 </a>
@@ -448,7 +448,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 0px; margin-bottom: 8px">
@@ -545,7 +545,7 @@
                       </ul>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -617,7 +617,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -701,7 +701,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -750,7 +750,7 @@
                     <section id='language-and-currency' class='hidden'>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -4305,7 +4305,7 @@
                 <div role="dialog" aria-label="Content type filters" aria-modal="true" class="_ewwxwe" tabindex="-1"
                     style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                   <div style="margin-top: 8px;">
-                    <div class="_12kfhdn">
+                    <div class="modal__body">
                       <div class="_1jcr8ov">
                         <label for="filter-checkbox-ARTICLES">
                           <div class="inline-block" style="margin-right: 16px;">
