--- a/messages-loader.html
+++ b/messages-loader.html
@@ -321,7 +321,7 @@
                                   <div class="_1mun5p5">
                                     <div class="_jt5ydgn">
                                       <section>
-                                        <h2 id="thread_header" tabindex="-1" class="_14i3z6h"
+                                        <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Airbnb Support</span><span
                                             class="a8jt5op dir dir-ltr">Conversation with Airbnb
                                             Support</span></h2>
@@ -777,7 +777,7 @@
                                   <div class="_1mun5p5">
                                     <div class="_jt5ydgn">
                                       <section>
-                                        <h2 id="thread_header" tabindex="-1" class="_14i3z6h"
+                                        <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Myrna</span><span
                                             class="a8jt5op dir dir-ltr">Conversation with Myrna</span></h2>
                                       </section>
@@ -1057,7 +1057,7 @@
                                   <div class="_1mun5p5">
                                     <div class="_jt5ydgn">
                                       <section>
-                                        <h2 id="thread_header" tabindex="-1" class="_14i3z6h"
+                                        <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Conversation with
                                             Kuniatsu</span><span class="a8jt5op dir dir-ltr">Conversation
                                             with Kuniatsu and Dorette</span></h2>
@@ -1297,7 +1297,7 @@
                                   <div class="_1mun5p5">
                                     <div class="_jt5ydgn">
                                       <section>
-                                        <h2 id="thread_header" tabindex="-1" class="_14i3z6h"
+                                        <h2 id="thread_header" tabindex="-1" class="heading-reset"
                                           elementtiming="LCP-target"><span aria-hidden="true">Adrian</span><span
                                             class="a8jt5op dir dir-ltr">Conversation with Adrian</span></h2>
                                       </section>
@@ -1676,7 +1676,7 @@
                                 <section class="_1iegt8e">
                                   <div class="_1kjx0lov">
                                     <div class="_6husucn">
-                                      <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Details</h2>
+                                      <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">Details</h2>
                                     </div>
                                     <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                         aria-label="Close the details panel and return to the conversation"
@@ -1691,7 +1691,7 @@
                                   </div>
                                   <div class="_d5nsn8">
                                     <div data-testid="support-thread-details" class="_9dd4bh">
-                                      <div class="_5kaapu">
+                                      <div class="flex-items-center">
                                         <div class="_1ggggng"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                             focusable="false"
@@ -1797,7 +1797,7 @@
                               <section class="_1iegt8e">
                                 <div class="_1kjx0lov">
                                   <div class="_6husucn">
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Details</h2>
+                                    <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">Details</h2>
                                   </div>
                                   <div class="_4qc6zu" data-testid="thread_details_close"><button data-button="close"
                                       aria-label="Close the details panel and return to the conversation"
@@ -1858,13 +1858,13 @@
               <header class="_1c8aprq">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
-                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                     <div class="_1q9sh65">Translation</div>
                   </h1>
                 </div>
                 <div class="_rrmdgl"></div>
               </header>
-              <div class="_12kfhdn">
+              <div class="modal__body">
                 <div class="mbyubyx dir dir-ltr">
                   <div class="tr7adke dir dir-ltr"><span id="messaging-translation-toggle-74384"
                       class="t1ncthsn dir dir-ltr">Translate this conversation</span><button aria-checked="true"
@@ -1903,7 +1903,7 @@
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
           <div class="_z4lmgp">
             <div role="dialog" aria-label="Translation" aria-modal="true" class="_1pusc02v" style="position: relative;">
-              <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
+              <div class="modal__close"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
                       viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                       focusable="false"
                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
@@ -1913,13 +1913,13 @@
               <header class="_1youxq0">
                 <div class="_1tng6ym"></div>
                 <div class="_9t7ktw">
-                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                     <div class="_1q9sh65">Translation</div>
                   </h1>
                 </div>
                 <div class="_rrmdgl"></div>
               </header>
-              <div class="_12kfhdn">
+              <div class="modal__body">
                 <div class="mbyubyx dir dir-ltr">
                   <div class="tr7adke dir dir-ltr"><span id="messaging-translation-toggle-90847"
                       class="t1ncthsn dir dir-ltr">Translate this conversation</span><button aria-checked="true"
