--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2263,7 +2263,7 @@
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
               <div role="dialog" aria-label="Filter messages" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button aria-label="Close" type="button" class="_oda838" id="show-filter-modal__close">
                     <span class="relative">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -2277,7 +2277,7 @@
                   <header class="_q8mwh4">
                     <div class="_1jqox1a"></div>
                     <div class="_1s09xaf">
-                      <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                      <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                         <div class="_1q9sh65">
                           <div class="flex-before-after dir dir-ltr" style="">
                             <div style="--gp-section-max-width:1120px;">
@@ -2327,7 +2327,7 @@
                               <div data-plugin-in-point-id="INBOX_FILTERS_MESSAGE_TYPE" data-section-id="INBOX_FILTERS_MESSAGE_TYPE" style="padding-top: 32px; padding-bottom: 32px;">
                                 <div>
                                   <h3 class="_1f88iq8">Message type</h3>
-                                  <div class="_1byskwn">
+                                  <div class="modal__items">
                                     <div class="_1s1qfkt6">
                                       <div class="_1ouw2w0">
                                         <label class="flex dir dir-ltr" for="unread">
@@ -2336,7 +2336,7 @@
                                             <span class="_41yoza" data-checkbox="true"></span>
                                           </span>
                                           <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
-                                            <div class="_l6x7wk">Unread</div>
+                                            <div class="modal__desc-sm">Unread</div>
                                           </span>
                                         </label>
                                       </div>
@@ -2349,7 +2349,7 @@
                                             <span class="_41yoza" data-checkbox="true"></span>
                                           </span>
                                           <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
-                                            <div class="_l6x7wk">Starred</div>
+                                            <div class="modal__desc-sm">Starred</div>
                                           </span>
                                         </label>
                                       </div>
@@ -2398,7 +2398,7 @@
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
               <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button aria-label="Back" type="button" class="_oda838" id="show-filter-experience-modal__close">
                     <span class="relative">
                       <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -2413,7 +2413,7 @@
                   <header class="_q8mwh4">
                     <div class="_1jqox1a"></div>
                     <div class="_1s09xaf">
-                      <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                      <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                         <div class="_1q9sh65">
                           <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width:1120px;">
