--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -1302,7 +1302,7 @@
                                 <section>
                                   <h2
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
                                     <span class="_1wkplgx">Opportunities</span>
@@ -1376,7 +1376,7 @@
                               <div>
                                 <h3
                                   tabindex="-1"
-                                  class="_14i3z6h"
+                                  class="heading-reset"
                                   elementtiming="LCP-target"
                                 >
                                   <span class="site-content__content-menu-h2-text">
@@ -1398,10 +1398,10 @@
                                 <section>
                                   <h1
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_lo9vot">Expertise</span>
+                                    <span class="modal__desc">Expertise</span>
                                   </h1>
                                 </section>
                                 <p class="_wc65yc">
@@ -1430,10 +1430,10 @@
                                 <section>
                                   <h1
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_lo9vot">Insider access</span>
+                                    <span class="modal__desc">Insider access</span>
                                   </h1>
                                 </section>
                                 <p class="_wc65yc">
@@ -1462,10 +1462,10 @@
                                 <section>
                                   <h1
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_lo9vot">Connection</span>
+                                    <span class="modal__desc">Connection</span>
                                   </h1>
                                 </section>
                                 <p class="_wc65yc">
@@ -1505,7 +1505,7 @@
                                 <div>
                                   <h3
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
                                     <span class="site-content__content-menu-h2-text">
