--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2209,7 +2209,7 @@
                   </div>
                   <div class="modal__heading-wrapper"></div>
                 </header>
-                <div class="_12kfhdn">
+                <div class="modal__body">
                   <div style="margin-bottom: 16px">
                     <section
                       role="status"
