--- a/payments/payment.html
+++ b/payments/payment.html
@@ -568,7 +568,7 @@
                                                     >
                                                       <h3
                                                         tabindex="-1"
-                                                        class="_14i3z6h"
+                                                        class="heading-reset"
                                                         elementtiming="LCP-target"
                                                       >
                                                         This is a rare find.
@@ -655,7 +655,7 @@
                                                 >
                                                   <h2
                                                     tabindex="-1"
-                                                    class="_14i3z6h"
+                                                    class="heading-reset"
                                                     elementtiming="LCP-target"
                                                   >
                                                     Your trip
@@ -690,7 +690,7 @@
                                                       >
                                                         <h3
                                                           tabindex="-1"
-                                                          class="_14i3z6h"
+                                                          class="heading-reset"
                                                           elementtiming="LCP-target"
                                                         >
                                                           Dates
@@ -744,7 +744,7 @@
                                                       >
                                                         <h3
                                                           tabindex="-1"
-                                                          class="_14i3z6h"
+                                                          class="heading-reset"
                                                           elementtiming="LCP-target"
                                                         >
                                                           Guests
@@ -813,7 +813,7 @@
                                                 >
                                                   <h2
                                                     tabindex="-1"
-                                                    class="_14i3z6h"
+                                                    class="heading-reset"
                                                     elementtiming="LCP-target"
                                                   >
                                                     Choose how to pay
@@ -960,7 +960,7 @@
                                                 >
                                                   <h2
                                                     tabindex="-1"
-                                                    class="_14i3z6h"
+                                                    class="heading-reset"
                                                     elementtiming="LCP-target"
                                                   >
                                                     Price details
@@ -1098,7 +1098,7 @@
                                                       <section>
                                                         <h2
                                                           tabindex="-1"
-                                                          class="_14i3z6h"
+                                                          class="heading-reset"
                                                           elementtiming="LCP-target"
                                                         >
                                                           <div class="_tcgbxn1">
@@ -4933,7 +4933,7 @@
                   </div>
                   <div class="modal__heading-wrapper"></div>
                 </header>
-                <div class="_12kfhdn">
+                <div class="modal__body">
                   <div style="margin-bottom: 16px">
                     <section
                       role="status"
@@ -5248,7 +5248,7 @@
                   </div>
                   <div class="modal__heading-wrapper"></div>
                 </header>
-                <div class="_12kfhdn">
+                <div class="modal__body">
                   <div id="quick-pay-v2-coupon-modal-content">
                     <form>
                       <div class="_1jj61m9">
