--- a/payments/resolutions_3.html
+++ b/payments/resolutions_3.html
@@ -417,11 +417,11 @@
                         </div>
                         <div class="hidden-md">
                           <section>
-                            <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                            <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                 <div class="_tcgbxn1 mb-1" style="font-size: 1.5em;">Pay with</div>
                             </h2>
                           </section>
-                          <div class="_5kaapu flex" style="justify-content: space-between;">
+                          <div class="flex-items-center flex" style="justify-content: space-between;">
                             <div>
                               <div class="_18k2iy" style="margin-right: 5px">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 32" aria-label="Mastercard"
