--- a/search-tips.html
+++ b/search-tips.html
@@ -381,7 +381,7 @@
                             <section>
                               <h1
                                 tabindex="-1"
-                                class="_14i3z6h"
+                                class="heading-reset"
                                 elementtiming="LCP-target"
                               >
                                 <div class="h19hb7kj dir dir-ltr">
@@ -403,7 +403,7 @@
                                       <div class="he2595w dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           How to search
@@ -640,7 +640,7 @@
                                       <div class="he2595w dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Understanding listings
@@ -1027,7 +1027,7 @@
                                       <div class="he2595w dir dir-ltr">
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           Saving favorites
@@ -1131,7 +1131,7 @@
                                 <div class="he2595w dir dir-ltr">
                                   <h1
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
                                     Related topics
