--- a/searching-and-booking.html
+++ b/searching-and-booking.html
@@ -329,7 +329,7 @@
                             <section>
                               <h1
                                 tabindex="-1"
-                                class="_14i3z6h"
+                                class="heading-reset"
                                 elementtiming="LCP-target"
                               >
                                 <div class="h19hb7kj dir dir-ltr">
@@ -398,7 +398,7 @@
                                 <div class="he2595w dir dir-ltr">
                                   <h1
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
                                     Related topics
