--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -447,7 +447,7 @@
                             <section>
                               <h1
                                 tabindex="-1"
-                                class="_14i3z6h"
+                                class="heading-reset"
                                 elementtiming="LCP-target"
                               >
                                 <div class="h19hb7kj dir dir-ltr">
@@ -846,7 +846,7 @@
                                           <button
                                             aria-describedby="content_feedback_primary_prompt"
                                             type="button"
-                                            class="_11eqlma4"
+                                            class="button-container__wrapper"
                                           >
                                             Yes
                                           </button>
@@ -854,7 +854,7 @@
                                         <button
                                           aria-describedby="content_feedback_primary_prompt"
                                           type="button"
-                                          class="_11eqlma4"
+                                          class="button-container__wrapper"
                                         >
                                           No
                                         </button>
@@ -866,7 +866,7 @@
                                       >
                                         <h2
                                           tabindex="-1"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                           elementtiming="LCP-target"
                                         >
                                           <div
@@ -1016,7 +1016,7 @@
                                 <section>
                                   <h2
                                     tabindex="-1"
-                                    class="_14i3z6h"
+                                    class="heading-reset"
                                     elementtiming="LCP-target"
                                   >
                                     <div class="t15kpzrz dir dir-ltr">
@@ -1149,7 +1149,7 @@
                           <section>
                             <h1
                               tabindex="-1"
-                              class="_14i3z6h"
+                              class="heading-reset"
                               elementtiming="LCP-target"
                             >
                               <div class="tgzm8rg dir dir-ltr">
