--- a/social-impact-host.html
+++ b/social-impact-host.html
@@ -84,7 +84,7 @@
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span id="FMP-target" class="navigation-section__header-h2"
                                         >Create new advocates for your
@@ -240,7 +240,7 @@
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Connect locals and travelers with your
@@ -425,7 +425,7 @@
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Reach an audience that cares</span
@@ -473,7 +473,7 @@
                                           target="_blank"
                                           aria-label="link"
                                           href="https://www.airbnb.com/experiences/112515"
-                                          class="_11eqlma4"
+                                          class="button-container__wrapper"
                                           ><div
                                             class="_190hxbq"
                                             style="height: 100%; width: 100%"
@@ -613,7 +613,7 @@ Cape Town, South Africa"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Generate sustainable income</span
@@ -695,7 +695,7 @@ Cape Town, South Africa"
                                           target="_blank"
                                           aria-label="link"
                                           href="https://www.airbnb.com/experiences/59117"
-                                          class="_11eqlma4"
+                                          class="button-container__wrapper"
                                           ><div
                                             class="_190hxbq"
                                             style="height: 100%; width: 100%"
@@ -800,7 +800,7 @@ Rome, Italy"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Inspire new advocates</span
@@ -848,7 +848,7 @@ Rome, Italy"
                                           target="_blank"
                                           aria-label="link"
                                           href="https://www.airbnb.com/experiences/47646"
-                                          class="_11eqlma4"
+                                          class="button-container__wrapper"
                                           ><div
                                             class="_190hxbq"
                                             style="height: 100%; width: 100%"
@@ -985,7 +985,7 @@ Harlem, New York City"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Host on your own terms</span
@@ -1066,7 +1066,7 @@ Harlem, New York City"
                                           target="_blank"
                                           aria-label="link"
                                           href="https://www.airbnb.com/experiences/82265"
-                                          class="_11eqlma4"
+                                          class="button-container__wrapper"
                                           ><div
                                             class="_190hxbq"
                                             style="height: 100%; width: 100%"
@@ -1171,7 +1171,7 @@ Harlem, New York City"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >How to get started</span
@@ -1311,7 +1311,7 @@ Harlem, New York City"
                                           <div class="_prcx4r">
                                             <h2
                                               tabindex="-1"
-                                              class="_14i3z6h"
+                                              class="heading-reset"
                                               elementtiming="LCP-target"
                                             >
                                               Find a host
@@ -1390,7 +1390,7 @@ Harlem, New York City"
                                           <div class="_prcx4r">
                                             <h2
                                               tabindex="-1"
-                                              class="_14i3z6h"
+                                              class="heading-reset"
                                               elementtiming="LCP-target"
                                             >
                                               Verify your nonprofit
@@ -1464,7 +1464,7 @@ Harlem, New York City"
                                           <div class="_prcx4r">
                                             <h2
                                               tabindex="-1"
-                                              class="_14i3z6h"
+                                              class="heading-reset"
                                               elementtiming="LCP-target"
                                             >
                                               Create your experience
@@ -1542,7 +1542,7 @@ Harlem, New York City"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Learn how it's done</span
@@ -1724,7 +1724,7 @@ Harlem, New York City"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2">About Airbnb</span>
                                     </h2>
@@ -1756,7 +1756,7 @@ Harlem, New York City"
                                           <div class="_prcx4r">
                                             <h2
                                               tabindex="-1"
-                                              class="_14i3z6h"
+                                              class="heading-reset"
                                               elementtiming="LCP-target"
                                             >
                                               What is Airbnb?
@@ -1785,7 +1785,7 @@ Harlem, New York City"
                                           <div class="_prcx4r">
                                             <h2
                                               tabindex="-1"
-                                              class="_14i3z6h"
+                                              class="heading-reset"
                                               elementtiming="LCP-target"
                                             >
                                               What is an Airbnb experience?
@@ -1856,7 +1856,7 @@ Harlem, New York City"
                                     <h2
                                       tabindex="-1"
                                       elementtiming="LCP-target"
-                                      class="_14i3z6h"
+                                      class="heading-reset"
                                     >
                                       <span class="navigation-section__header-h2"
                                         >Questions answered</span
@@ -3301,7 +3301,7 @@ Harlem, New York City"
                   </button>
                 </div>
                 <header class="modal__header-container border-b-0"></header>
-                <div class="_12kfhdn">
+                <div class="modal__body">
                   <div class="_5i3nbc">
                     Can there be more than one host for my experience?
                   </div>
