--- a/ticket-selection.html
+++ b/ticket-selection.html
@@ -349,7 +349,7 @@
                                           <h1
                                             tabindex="-1"
                                             elementtiming="LCP-target"
-                                            class="_14i3z6h"
+                                            class="heading-reset"
                                           >
                                             <div class="_1yrl4d7p">
                                               <div id="FMP-target">
@@ -368,7 +368,7 @@
                                             <h2
                                               tabindex="-1"
                                               elementtiming="LCP-target"
-                                              class="_14i3z6h"
+                                              class="heading-reset"
                                             >
                                               <div class="_b9qfkc2">
                                                 Need help with an issue we're
@@ -582,7 +582,7 @@
                                           <h1
                                             tabindex="-1"
                                             elementtiming="LCP-target"
-                                            class="_14i3z6h"
+                                            class="heading-reset"
                                           >
                                             <div class="_1yrl4d7p">
                                               Log in to contact us
@@ -634,7 +634,7 @@
                                         <h2
                                           tabindex="-1"
                                           elementtiming="LCP-target"
-                                          class="_14i3z6h"
+                                          class="heading-reset"
                                         >
                                           <div class="_26piifo">
                                             These articles might help
@@ -655,7 +655,7 @@
                                                   <h3
                                                     tabindex="-1"
                                                     elementtiming="LCP-target"
-                                                    class="_14i3z6h"
+                                                    class="heading-reset"
                                                   >
                                                     Getting started
                                                   </h3>
@@ -716,7 +716,7 @@
                                                   <h3
                                                     tabindex="-1"
                                                     elementtiming="LCP-target"
-                                                    class="_14i3z6h"
+                                                    class="heading-reset"
                                                   >
                                                     Your account
                                                   </h3>
@@ -778,7 +778,7 @@
                                                   <h3
                                                     tabindex="-1"
                                                     elementtiming="LCP-target"
-                                                    class="_14i3z6h"
+                                                    class="heading-reset"
                                                   >
                                                     Trust and safety
                                                   </h3>
