--- a/topic.html
+++ b/topic.html
@@ -237,7 +237,7 @@
                                             <ul class="_7s3ukx">
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/getting-started-53" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Getting started</div>
                                                   </h1>
                                                 </a>
@@ -256,7 +256,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/attracting-bookings-59" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Attracting bookings</div>
                                                   </h1>
                                                 </a>
@@ -280,7 +280,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/providing-a-5-star-experience-61" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Providing a 5-star Experience</div>
                                                   </h1>
                                                 </a>
@@ -299,7 +299,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/responsible-hosting-64" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Responsible hosting</div>
                                                   </h1>
                                                 </a>
@@ -318,7 +318,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/online-experiences-55" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Online Experiences</div>
                                                   </h1>
                                                 </a>
@@ -450,7 +450,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 0px; margin-bottom: 8px">
@@ -547,7 +547,7 @@
                       </ul>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -619,7 +619,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -703,7 +703,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -752,7 +752,7 @@
                     <section id='language-and-currency' class='hidden'>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -967,7 +967,7 @@
                                                 <div style="margin-bottom:16px">
                                                     <div class="_rhltx6">
                                                         <section class="_1xi2lcs">
-                                                            <h1 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">Attracting
+                                                            <h1 tabindex="-1" elementtiming="LCP-target" class="heading-reset">Attracting
                                                                 bookings</h1>
                                                         </section>
                                                     </div>
@@ -2362,7 +2362,7 @@
                 <div role="dialog" aria-label="Content type filters" aria-modal="true" class="_ewwxwe" tabindex="-1"
                     style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                   <div style="margin-top: 8px;">
-                    <div class="_12kfhdn">
+                    <div class="modal__body">
                       <div class="_1jcr8ov">
                         <label for="filter-checkbox-ARTICLES">
                           <div class="inline-block" style="margin-right: 16px;">
