--- a/article.html
+++ b/article.html
@@ -236,7 +236,7 @@
                                             <ul class="_7s3ukx">
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/getting-started-53" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Getting started</div>
                                                   </h1>
                                                 </a>
@@ -255,7 +255,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/attracting-bookings-59" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Attracting bookings</div>
                                                   </h1>
                                                 </a>
@@ -279,7 +279,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/providing-a-5-star-experience-61" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Providing a 5-star Experience</div>
                                                   </h1>
                                                 </a>
@@ -298,7 +298,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/responsible-hosting-64" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Responsible hosting</div>
                                                   </h1>
                                                 </a>
@@ -317,7 +317,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/online-experiences-55" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Online Experiences</div>
                                                   </h1>
                                                 </a>
@@ -449,7 +449,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 0px; margin-bottom: 8px">
@@ -546,7 +546,7 @@
                       </ul>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -618,7 +618,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -702,7 +702,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -751,7 +751,7 @@
                     <section id='language-and-currency' class='hidden'>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -997,7 +997,7 @@
                                 <div class="_11ry7lz">
                                   <div class="_vfwjg3" style="margin-bottom:16px">
                                     <div class="_1xi2lcs">
-                                      <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">Easy
+                                      <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading-reset">Easy
                                             ways to help attract bookings for your Experience</h1>
                                     </div>
                                   </div>
@@ -1022,14 +1022,14 @@
                                   <div class="_p3iv50">
                                     <div class="_1tcxgp3">
                                       <div class="_76wic2">
-                                        <button type="button" class="_11eqlma4">
+                                        <button type="button" class="button-container__wrapper">
                                           <svg viewBox="0 0 32 32" role="img" aria-hidden="false" aria-label="Facebook" focusable="false" style="height:16px;width:16px;display:block;fill:currentColor">
                                             <path d="m8 14.41v-4.17c0-.42.35-.81.77-.81h2.52v-2.08c0-4.84 2.48-7.31 7.42-7.35 1.65 0 3.22.21 4.69.64.46.14.63.42.6.88l-.56 4.06c-.04.18-.14.35-.32.53-.21.11-.42.18-.63.14-.88-.25-1.78-.35-2.8-.35-1.4 0-1.61.28-1.61 1.73v1.8h4.52c.42 0 .81.42.81.88l-.35 4.17c0 .42-.35.71-.77.71h-4.21v16c0 .42-.35.81-.77.81h-5.21c-.42 0-.8-.39-.8-.81v-16h-2.52a.78.78 0 0 1 -.78-.78" fill-rule="evenodd"></path>
                                           </svg>
                                         </button>
                                       </div>
                                       <div class="_76wic2">
-                                        <button type="button" class="_11eqlma4">
+                                        <button type="button" class="button-container__wrapper">
                                           <svg viewBox="0 0 32 32" role="img" aria-hidden="false" aria-label="Twitter" focusable="false" style="height:16px;width:16px;display:block;fill:currentColor">
                                             <path
                                                 d="m31 6.36c-1.16.49-2.32.82-3.55.95 1.29-.76 2.22-1.87 2.72-3.38a13.05 13.05 0 0 1 -3.91 1.51c-1.23-1.28-2.75-1.94-4.51-1.94-3.41 0-6.17 2.73-6.17 6.12 0 .49.07.95.17 1.38-4.94-.23-9.51-2.6-12.66-6.38-.56.95-.86 1.97-.86 3.09 0 2.07 1.03 3.91 2.75 5.06-1-.03-1.92-.3-2.82-.76v.07c0 2.89 2.12 5.42 4.94 5.98-.63.17-1.16.23-1.62.23-.3 0-.7-.03-1.13-.13a6.07 6.07 0 0 0 5.74 4.24c-2.22 1.74-4.78 2.63-7.66 2.63-.56 0-1.06-.03-1.43-.1 2.85 1.84 6 2.76 9.41 2.76 7.29 0 12.83-4.01 15.51-9.3 1.36-2.66 2.02-5.36 2.02-8.09v-.46c-.03-.17-.03-.3-.03-.33a12.66 12.66 0 0 0 3.09-3.16"
@@ -1078,7 +1078,7 @@
                                   <div class="_11ry7lz">
                                     <section>
                                       <div class="text-3xl">
-                                        <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">1. Start with an
+                                        <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">1. Start with an
                                               introductory price</h2>
                                       </div>
                                     </section>
@@ -1106,7 +1106,7 @@
                                   <div class="_11ry7lz">
                                     <section>
                                       <div class="text-3xl">
-                                          <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">2. Adjust your
+                                          <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">2. Adjust your
                                               calendar settings</h2>
                                       </div>
                                     </section>
@@ -1135,7 +1135,7 @@
                                   <div class="_11ry7lz">
                                     <section>
                                       <div class="text-3xl">
-                                        <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">3. Allow
+                                        <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">3. Allow
                                             last-minute bookings</h2>
                                       </div>
                                     </section>
@@ -1197,7 +1197,7 @@
                                                     <div class="inline-block" style="margin-bottom:8px;margin-left:8px">
                                                         <div class="_egxdnj">
                                                             <section>
-                                                                <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
+                                                                <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">
                                                                     Highlights</h2>
                                                             </section>
                                                         </div>
@@ -1295,7 +1295,7 @@
                                     <div class="_qmx5s9" style="margin-bottom:24px;margin-left:0;margin-right:0">
                                         <section>
                                             <div class="_194mu2a">
-                                                <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">You might also like</h2>
+                                                <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">You might also like</h2>
                                             </div>
                                         </section>
                                     </div>
