--- a/edit/bring.html
+++ b/edit/bring.html
@@ -525,7 +525,7 @@
                                             <section>
                                               <h2
                                                 tabindex="-1"
-                                                class="_14i3z6h"
+                                                class="heading-reset"
                                                 elementtiming="LCP-target"
                                               >
                                                 <span
