--- a/video.html
+++ b/video.html
@@ -237,7 +237,7 @@
                                             <ul class="_7s3ukx">
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/getting-started-53" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Getting started</div>
                                                   </h1>
                                                 </a>
@@ -256,7 +256,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/attracting-bookings-59" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Attracting bookings</div>
                                                   </h1>
                                                 </a>
@@ -280,7 +280,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/providing-a-5-star-experience-61" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Providing a 5-star Experience</div>
                                                   </h1>
                                                 </a>
@@ -299,7 +299,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/responsible-hosting-64" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                       <div class="_1sq6228">Responsible hosting</div>
                                                   </h1>
                                                 </a>
@@ -318,7 +318,7 @@
                                               </li>
                                               <li class="_10l2n4x">
                                                 <a href="/resources/hosting-experiences/t/online-experiences-55" class="_pt3ip3y">
-                                                  <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                                  <h1 tabindex="-1" class="heading-reset" elementtiming="LCP-target">
                                                     <div class="_1sq6228">Online Experiences</div>
                                                   </h1>
                                                 </a>
@@ -450,7 +450,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 0px; margin-bottom: 8px">
@@ -547,7 +547,7 @@
                       </ul>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -619,7 +619,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -703,7 +703,7 @@
                     <section>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -752,7 +752,7 @@
                     <section id='language-and-currency' class='hidden'>
                       <h1
                         tabindex="-1"
-                        class="_14i3z6h"
+                        class="heading-reset"
                         elementtiming="LCP-target"
                       >
                         <div style="margin-top: 8px; margin-bottom: 8px">
@@ -1004,7 +1004,7 @@
                                       <div class="_11ry7lz">
                                           <div class="_vfwjg3" style="margin-bottom:16px">
                                               <div class="_1xi2lcs">
-                                                  <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
+                                                  <h1 id="FMP-target" tabindex="-1" elementtiming="LCP-target" class="heading-reset">
                                                       Experience guest spotlight with Ranier and Stephanie</h1>
                                               </div>
                                           </div>
@@ -1023,7 +1023,7 @@
                                           </div>
                                           <div class="_p3iv50">
                                               <div class="_1tcxgp3">
-                                                  <div class="_76wic2"><button type="button" class="_11eqlma4"><svg
+                                                  <div class="_76wic2"><button type="button" class="button-container__wrapper"><svg
                                                               viewBox="0 0 32 32" role="img" aria-hidden="false" aria-label="Facebook"
                                                               focusable="false"
                                                               style="height:16px;width:16px;display:block;fill:currentColor">
@@ -1031,7 +1031,7 @@
                                                                   d="m8 14.41v-4.17c0-.42.35-.81.77-.81h2.52v-2.08c0-4.84 2.48-7.31 7.42-7.35 1.65 0 3.22.21 4.69.64.46.14.63.42.6.88l-.56 4.06c-.04.18-.14.35-.32.53-.21.11-.42.18-.63.14-.88-.25-1.78-.35-2.8-.35-1.4 0-1.61.28-1.61 1.73v1.8h4.52c.42 0 .81.42.81.88l-.35 4.17c0 .42-.35.71-.77.71h-4.21v16c0 .42-.35.81-.77.81h-5.21c-.42 0-.8-.39-.8-.81v-16h-2.52a.78.78 0 0 1 -.78-.78"
                                                                   fill-rule="evenodd"></path>
                                                           </svg></button></div>
-                                                  <div class="_76wic2"><button type="button" class="_11eqlma4"><svg
+                                                  <div class="_76wic2"><button type="button" class="button-container__wrapper"><svg
                                                               viewBox="0 0 32 32" role="img" aria-hidden="false" aria-label="Twitter"
                                                               focusable="false"
                                                               style="height:16px;width:16px;display:block;fill:currentColor">
@@ -1072,7 +1072,7 @@
                                                       <div class="inline-block" style="margin-bottom:8px;margin-left:8px">
                                                           <div class="_egxdnj">
                                                               <section>
-                                                                  <h2 tabindex="-1" elementtiming="LCP-target" class="_14i3z6h">
+                                                                  <h2 tabindex="-1" elementtiming="LCP-target" class="heading-reset">
                                                                       Highlights</h2>
                                                               </section>
                                                           </div>
@@ -1175,7 +1175,7 @@
                               <div class="_qmx5s9" style="margin-bottom:24px;margin-left:0;margin-right:0">
                                 <section>
                                   <div class="_194mu2a">
-                                    <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">You might also like</h2>
+                                    <h2 tabindex="-1" class="heading-reset" elementtiming="LCP-target">You might also like</h2>
                                   </div>
                                 </section>
                               </div>
